# ClockMatrix

./: CMakeLists.txt  sdkconfig.defaults
components/ds3231_rtc/: CMakeLists.txt  ds3231_rtc.c
components/ds3231_rtc/include/: ds3231_rtc.h
main/: CMakeLists.txt  config.h  inputs.c  inputs.h  main.c  max7219.c  max7219.h  time_sync.c  time_sync.h  wifi_manager.c  wifi_manager.h
